crates/solidity/testing/snapshots/bindings_output/user_types/top_level/generated/0.7.1-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or FunctionKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[input.sol:8:1]
   │
 8 │ type TopLevel is uint256;
   │ ─────────────┬────────────  
   │              ╰────────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 1
 2 │     function test() public pure returns (uint) {
   │              ──┬─  
   │                ╰─── def: 2
 3 │         TopLevel tl = TopLevel.wrap(20);
   │         ────┬─── ─┬   ────┬─── ──┬─  
   │             ╰──────────────────────── unresolved
   │                   │       │      │   
   │                   ╰────────────────── def: 3
   │                           │      │   
   │                           ╰────────── unresolved
   │                                  │   
   │                                  ╰─── unresolved
 4 │         return TopLevel.unwrap(tl);
   │                ────┬─── ───┬── ─┬  
   │                    ╰─────────────── unresolved
   │                            │    │  
   │                            ╰─────── unresolved
   │                                 │  
   │                                 ╰── ref: 3
───╯
